<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_MotionCommand" Id="{95b7e1f5-e810-48fa-b0fa-436eb26bcc03}">
    <Declaration><![CDATA[TYPE ST_MotionCommand :
    // Defines the EPICS interface to moving a motor in TwinCAT
STRUCT
    (* Commands *)
    // Used internally to reset errors and other state
    {attribute 'pytmc' := '
        pv: PLC:bReset
        io: io
        field: ZNAM FALSE
        field: ONAM TRUE
        field: DESC Used internally to reset errors
    '}
    bReset: BOOL;
    // Used internally and by the IOC to start or stop a move
    {attribute 'pytmc' := '
        pv: PLC:bExecute
        io: io
        field: DESC Used internally and by the IOC to pick what kind of move to do
    '}
    // Start the homing routine
    {attribute 'pytmc' := '
        pv: PLC:bHomeCmd
        io: io
        field: DESC Start the homing routine
    '}
    bHomeCmd: BOOL;
	
    bExecute: BOOL;
    // Used internally and by the IOC to pick what kind of move to do
    {attribute 'pytmc' := '
        pv: PLC:nCommand
        io: io
        field: DESC Used internally and by the IOC to pick what kind of move to do
    '}
	nCommand: INT;
    // Used internally and by the IOC to pass additional data to some commands
    {attribute 'pytmc' := '
        pv: PLC:nCmdData
        io: io
        field: DESC Used internally and by the IOC to pass additional data to some commands
    '}
	nCmdData: INT;	
    // Used internally and by the IOC to pick a destination for the move
    {attribute 'pytmc' := '
        pv: PLC:fPosition
        io: io
        field: DESC Used internally and by the IOC to pick a destination for the move
    '}
    fPosition: LREAL;
    // Used internally and by the IOC to pick a move velocity
    {attribute 'pytmc' := '
        pv: PLC:fVelocity
        io: io
        field: DESC Used internally and by the IOC to pick a move velocity
    '}
    fVelocity: LREAL;
    // Used internally and by the IOC to pick a move acceleration
    {attribute 'pytmc' := '
        pv: PLC:fAcceleration
        io: io
        field: DESC Used internally and by the IOC to pick a move acceleration
    '}
    fAcceleration: LREAL;
    // Used internally and by the IOC to pick a move deceleration
    {attribute 'pytmc' := '
        pv: PLC:fAcceleration
        io: io
        field: DESC Used internally and by the IOC to pick a move deceleration
    '}
    fDeceleration: LREAL;
    // Used internally and by the IOC to pick a move jerk
    {attribute 'pytmc' := '
        pv: PLC:fJerk
        io: io
        field: DESC Used internally and by the IOC to pick a move jerk
    '}
    fJerk: LREAL;
    // Used internally and by the IOC to pick a home position
    {attribute 'pytmc' := '
        pv: PLC:fHomePosition
        io: io
        field: DESC Used internally and by the IOC to pick home position
    '}
    fHomePosition: LREAL;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>